--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ languahe: cpp
 script:
 - cmake -Hformatter_lib -Bformatter_lib/_build -DCMAKE_INSTALL_PREFIX=_install
 - cmake --build formatter_lib/_build
+- cmake -Hformatter_ex_lib -Bformatter_ex_lib/_build -DCMAKE_INSTALL_PREFIX=_install
+- cmake --build formatter_ex_lib/_build
 
 addons:
   apt:
